Make wagtail footer richtext
Former-commit-id: 9451eb546578c3acfbdb06ead14b1e9dd02fb4d6

--- a/templates/base.html
+++ b/templates/base.html
@@ -185,18 +185,18 @@
 
             <div id="footer-nav" class="row">
                 <div class="col-md-3">
-                    {{ wagtail_root_page.footer_column_1|safe }}
+                    {{ wagtail_root_page.footer_column_1|richtext }}
                 </div>
                 <div class="col-md-3">
-                    {{ wagtail_root_page.footer_column_2|safe }}
-                </div>
-
-                <div class="col-md-3">
-                    {{ wagtail_root_page.footer_column_3|safe }}
+                    {{ wagtail_root_page.footer_column_2|richtext }}
                 </div>
 
                 <div class="col-md-3">
-                    {{ wagtail_root_page.footer_column_4|safe }}
+                    {{ wagtail_root_page.footer_column_3|richtext }}
+                </div>
+
+                <div class="col-md-3">
+                    {{ wagtail_root_page.footer_column_4|richtext }}
                 </div>
             </div>
 
