--- a/templates/filters.html
+++ b/templates/filters.html
@@ -49,6 +49,15 @@
                 <div class="col-md-3 filterbox no-pad">
                     <ul class="variables">
                         <li>
+                            <h4>Unsorted</h4>
+                            <ul>
+                                {% for key, value in variables.items %}
+                                    <li><a href="#" id="{{ key }}">{% trans value %}</a>
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </li>
+                        <li>
                             <h4>{% trans "Spatial Data" %}</h4>
                             <ul>
                                 <li><a href="#">{% trans "Location" %}</a></li>
@@ -91,7 +100,11 @@
                     <div class="input-group">
                         <button class="btn btn-default"><i class="lm lm-plus"></i> {% trans "Add condition" %}</button>
                     </div>
-
+                    <div class="btn-group">
+                        <button type="submit" class="btn" name="reset"
+                                value="reset">{% trans "Reset" %}</button>
+                        <button type="submit" class="btn">{% trans "Go" %}</button>
+                    </div>
                 </div>
             </div>
         </form>
@@ -215,9 +228,9 @@
                                             </ul>
                                         {% endfor %}
                                     {% endif %}
-                                    <ul class="form clearfix condition empty">
+                                    <!-- <ul class="form clearfix condition empty">
                                         <li>Hello Bob!</li>
-                                        {{ empty_form_conditions.empty_form.as_ul }}
+                                        {{ empty_form_conditions.empty_form.as_ul }} -->
                                     </ul>
                                 </div>
                             </div>
@@ -256,6 +269,16 @@
                                                 }
                                             });
                                             //
+                                            $("form").submit(function (e) {
+                                                e.preventDefault();
+                                                var form = $(this);
+                                                data = form.serialize();
+                                                console.log("This is what i'm transmitting:", data);
+                                                $.post('api/add-filter', data, success = function (foo) {
+                                                    console.log("Result:", foo);
+                                                });
+                                            });
+
                                             $("ul.form.empty").formset({
                                                 prefix: '{{ empty_form_conditions.prefix }}',
                                                 addText: '{% trans "Add filter" %}',
@@ -272,11 +295,11 @@
                                             $(".filters .btn-group").prepend(b.show());
                                         })
                                     </script>
-                                    <div class="btn-group">
+                                    <!--<div class="btn-group">
                                         <button type="submit" class="btn" name="reset"
                                                 value="reset">{% trans "Reset" %}</button>
                                         <button type="submit" class="btn">{% trans "Go" %}</button>
-                                    </div>
+                                    </div>-->
                                 </div>
                             </div>
                         </form>
