--- a/templates/share.html
+++ b/templates/share.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-<a id="btn-share" class="popover-html" data-container="body" data-toggle="popover" data-placement="top" href="javascript:;">
+<a id="btn-share" class="popover-html" data-container="body" data-toggle="popover" data-placement="bottom" href="javascript:;">
     <i class="lm lm-spacer lm-share-square-o"></i>
     {% trans "Share" %}
 </a>
