--- a/wagtailcms/templates/widgets/image.html
+++ b/wagtailcms/templates/widgets/image.html
@@ -1,6 +1,6 @@
 <div class="widget-image">
 {% if href %}
-	<a href="{{ href }}"><img src="{{ url }}" class="image" alt="{{ name }}" title="{{ name }}"></a>
+	<a href="{{ href }}" target="_blank"><img src="{{ url }}" class="image" alt="{{ name }}" title="{{ name }}"></a>
 {% else %}
 	<img src="{{ url }}" class="image" alt="{{ name }}" title="{{ name }}">
 {% endif %}
