--- a/wagtailcms/templates/widgets/slider.html
+++ b/wagtailcms/templates/widgets/slider.html
@@ -11,7 +11,7 @@
         <div class="carousel-inner" role="listbox">
 			{% for image in images %}
             <div class="item{% if forloop.first %} active{% endif %}">
-				{% include 'widgets/image.html' with url=image.url name=image.name %}
+				{% include 'widgets/image.html' with url=image.url name=image.name href=image.href %}
                 <div class="carousel-caption">
                 </div>
 			</div>
