Fixed full width container styling
Former-commit-id: 73b11c92de2b345ae13f35a187511905bcfa5c2b

--- a/wagtailcms/templates/widgets/full-width-container.html
+++ b/wagtailcms/templates/widgets/full-width-container.html
@@ -3,7 +3,9 @@
 <div class="well">
 	<div class="container">
 		<div class="row">
-			{{ content|safe }}
+			<div class="col-md-12">
+				{{ content|safe }}
+			</div>
 		</div>
 	</div>
 </div>
