--- a/wagtailcms/templates/widgets/full-width-container.html
+++ b/wagtailcms/templates/widgets/full-width-container.html
@@ -1,6 +1,6 @@
 	</div><!-- close block wrapper -->
 </div>
-<div class="well">
+<div class="fullwidth fullwidth-{{ color }}">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
