Fixed styling for full width container
Former-commit-id: ca6113c53e9000dcd36d4c93c311ef49894e47f6

--- a/landmatrix/static/css/content.css
+++ b/landmatrix/static/css/content.css
@@ -2727,8 +2727,15 @@ img {
 /* FULL WIDTH CONTAINERS */
 .fullwidth {
     border-top: 1px solid #c6c6c6;
+    border-bottom: 1px solid #c6c6c6;
 }
 .fullwidth:first-child {
+    border-top: none;
+}
+.fullwidth-empty {
+    display: none;
+}
+.fullwidth-empty + .fullwidth {
     border-top: none;
 }
 .fullwidth.fullwidth-lightgrey {
