--- a/wagtailcms/templates/widgets/full-width-container.html
+++ b/wagtailcms/templates/widgets/full-width-container.html
@@ -9,5 +9,5 @@
 		</div>
 	</div>
 </div>
-<div class="container">
+<div class="fullwidth fullwidth-empty">
 	<div class="block-full_width_container"><!-- reopen block wrapper -->
