Fixed styling for full width container
Former-commit-id: 4735a56ee5294fc7980c366ccba3fe15fbcaf36a

--- a/landmatrix/static/css/content.css
+++ b/landmatrix/static/css/content.css
@@ -2732,10 +2732,11 @@ img {
 .fullwidth:first-child {
     border-top: none;
 }
-.fullwidth-empty {
-    display: none;
+.fullwidth-after {
+    border-top: none;
+    border-bottom: none;
 }
-.fullwidth-empty + .fullwidth {
+.fullwidth-after + .fullwidth {
     border-top: none;
 }
 .fullwidth.fullwidth-lightgrey {
