--- a/charts/templates/charts/base_chart.html
+++ b/charts/templates/charts/base_chart.html
@@ -20,6 +20,9 @@
         <i class="lm lm-bar-chart"></i>{% trans "Charts" %}
     </span></li>
     <li class="divider"></li>
+    <li role="presentation">
+        {% include "download.html" %}
+    </li>
 {% endblock %}
 
 {% block content %}
