--- a/map/templates/map/map.html
+++ b/map/templates/map/map.html
@@ -30,6 +30,9 @@
         <i class="lm lm-bar-chart"></i>{% trans "Charts" %}
     </a></li>
     <li class="divider"></li>
+    <li role="presentation">
+        {% include "download.html" %}
+    </li>
 {% endblock %}
 
 {% block content %}
