--- a/grid/templates/group-by.html
+++ b/grid/templates/group-by.html
@@ -31,6 +31,9 @@
         <i class="lm lm-bar-chart"></i>{% trans "Charts" %}
     </a></li>
     <li class="divider"></li>
+    <li role="presentation">
+        {% include "download.html" %}
+    </li>
 {% endblock %}
 
 {% block content %}
