--- a/grid/templates/add-deal.html
+++ b/grid/templates/add-deal.html
@@ -14,14 +14,11 @@
 
     <script src="{% static "vendor/openlayers/ol.js" %}" type="text/javascript"></script>
     <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
-
     <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
+    <script src="{% static "js/editor/jquery.formset.custom.js" %}" type="text/javascript" charset="utf-8"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB59at4M4o0ERqk8OkvZOYjxH7N-8_HkNE&libraries=places"></script>
-
     <script>unlockMaps()</script>
-
-
 {% endblock %}
 
 {% block page_title %}{% trans "Add a deal" %}{% endblock %}
@@ -35,19 +32,13 @@
 {% endblock %}
 
 {% block content %}
-    <form action="." method="post" enctype="multipart/form-data">
-
-        {% csrf_token %}
-
-        <div class="panel-group" id="accordion">
-
-        {% include "includes/dealpanels.html" %}
-
-        </div>
-
-        <input type="submit" value="{% trans 'Submit' %}"/>
-
-    </form>
+<form action="." method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    <div class="panel-group" id="accordion">
+    {% include "includes/dealpanels.html" %}
+    </div>
+    <input type="submit" value="{% trans 'Submit' %}"/>
+</form>
 
 {% endblock %}
 
