Fixed map in formsets

--- a/grid/templates/add-deal.html
+++ b/grid/templates/add-deal.html
@@ -37,7 +37,7 @@
     <div class="panel-group" id="accordion">
     {% include "includes/dealpanels.html" %}
     </div>
-    <input type="submit" value="{% trans 'Submit' %}"/>
+    <input type="submit" class="btn btn-primary" value="{% trans 'Submit' %}"/>
 </form>
 
 {% endblock %}
