--- a/grid/templates/change-deal.html
+++ b/grid/templates/change-deal.html
@@ -40,7 +40,7 @@
             {% include "includes/dealpanels.html" %}
         </div>
 
-        <input type="submit" value="{% trans 'Submit' %}"/>
+        <input type="submit" class="btn btn-primary" value="{% trans 'Submit' %}"/>
 
     </form>
 
